--- a/land.html
+++ b/land.html
@@ -1,53 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Character encoding and responsive viewport setup -->
+    <!-- Document Metadata and Setup
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- Character encoding for proper text rendering -->
     <meta charset="UTF-8">
+    <!-- Responsive viewport settings for mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- App title displayed in browser tab -->
     <title>Weather App</title>
-    <!-- Link to our custom CSS file -->
+    <!-- External stylesheet for all visual styling -->
     <link rel="stylesheet" href="colorful.css">
 </head>
 <body>
-<!-- Container for API key (if needed) -->
-<div class="api">
-</div>
 
-<!-- Top banner section containing the search form -->
+<!-- Top Banner Section
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!-- Contains app header and search functionality -->
 <section class="top-banner">
   <div class="container">
+    <!-- Main app title -->
     <h1 class="heading">Weather App</h1>
-    <!-- Search form for city weather lookup -->
+    <!-- City search form -->
     <form>
-      <!-- Input field with autofocus for better UX -->
+      <!-- Search input with autofocus for immediate typing -->
       <input type="text" placeholder="Search for a city" autofocus>
+      <!-- Submit button for search -->
       <button type="submit">SUBMIT</button>
-      <!-- Message container for error/success notifications -->
+      <!-- Container for error messages -->
       <span class="msg"></span>
     </form>
   </div>
+  <!-- Search format suggestion -->
   <div>
-    <!-- Search format suggestion for users -->
     <p class="suggestion">e.g. New York, US</p>
   </div>
 </section>
 
-<!-- Section where weather cards will be dynamically added -->
+<!-- Weather Display Section
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!-- Section for dynamically generated weather cards -->
 <section class="ajax-section">
   <div class="container">
-    <!-- Container for weather cards -->
+    <!-- Unordered list to hold weather cards
+         Cards are added here via JavaScript -->
     <ul class="cities"></ul>
   </div>
 </section>
 
-<!-- Footer section -->
+<!-- Footer Section
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!-- Page footer with credits -->
 <footer class="page-footer">
   <div class="container">
     <p>Created by Alex</p>
   </div>
 </footer>
 
-<!-- Link to our JavaScript file -->
+<!-- JavaScript
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!-- Main application logic and functionality -->
 <script src="city.js"></script>
 </body>
 </html>
